--- a/python-bot.service
+++ b/python-bot.service
@@ -5,7 +5,7 @@ After=network-online.target
 
 [Service]
 Type=simple
-User=telegram-bot-server
+User=admin
 ExecStart=/usr/bin/python3 /home/admin/app/tg_bot_helper/bot.py
 WorkingDirectory=/home/admin/app/tg_bot_helper
 
